# langchain-rag-notes

./: .gitignore  README.md  pyproject.toml
examples/: common.py  hybrid_bm25_vector.py  hybrid_notes_web.py  hyde.py  multi_query.py  router_notes_web.py  simple_notes_rag.py
skills/rag-notes/: SKILL.md
src/rag/: cli.py  config.py  core.py  strategies.py
