[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-practice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-core==0.3.0",
    "langchain-openai==0.2.0",
    "pydantic>=2.13.4",
    "langchain-community==0.3.0",
    "gitpython",
    "langchain-text-splitters==0.3.0",
    "langchain-chroma==0.1.4",
    "langgraph==0.2.22",
    "langchain==0.3.0",
    "pygraphviz>=1.14",
    "rank-bm25 == 0.2.2",
]

[project.scripts]
rag = "rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
